Fixed recommended not showing up

--- a/client/src/RatingsReviews/ReviewStyle.scss
+++ b/client/src/RatingsReviews/ReviewStyle.scss
@@ -230,7 +230,7 @@
 }
 .rr-recommended {
   grid-row-start: 4;
-  grid-column: span 5;
+  grid-column: 4/6;
 }
 .rr-photos-div {
   grid-row-start: 6;
